--- a/styles/all.css
+++ b/styles/all.css
@@ -1,4 +1,78 @@
 @charset "UTF-8";
 
 
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
+:root {
+    --azul-claro: rgb(109, 109, 255);
+    --azul-mediano: rgb(56, 69, 130);
+    --azul-escuro: rgb(31, 47, 115);
+}
+
+strong {
+    color: rgb(69, 255, 255);
+}
+
+header {
+    background-image: linear-gradient(to right, var(--azul-mediano), var(--azul-claro));
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    color: white;
+    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.23);
+}
+
+header div.conteudo {
+    min-width: 1200px;
+    display: flex;
+    justify-content: space-around;
+}
+
+header div.titulo {
+    padding: 60px 0px 30px 0px;
+}
+
+header img {
+    height: 300px;
+    width: 300px;
+}
+
+header h1 {
+    font-size: 50px;
+    font-family: sans-serif;
+}
+
+header p {
+    font-size: 30px;
+    font-weight: 600;
+}
+
+header button {
+    background-color: rgb(0, 203, 203);
+    box-shadow: 3px 3px 2px rgba(0, 0, 0, 0.22);
+    border-radius: 10px;
+    border: none;
+
+    height: 50px;
+    width: 150px;
+    margin-top: 50px;
+
+    color: white;
+    text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.25);
+    font-size: 20px;
+    font-weight: bolder;
+
+    transition: .3s;
+}
+
+header button:hover {
+    box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.28);
+    background-color: rgb(0, 223, 223);
+    cursor: pointer;
+}
