adicionei um efeito de hover

--- a/styles/all.css
+++ b/styles/all.css
@@ -73,6 +73,8 @@ header button {
 
 header button:hover {
     box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.28);
-    background-color: rgb(0, 223, 223);
+    background-color: rgb(2, 211, 211);
     cursor: pointer;
+    transform: scale(1.02);
+    transform: translateY(-2px)
 }
