--- a/styles/all.css
+++ b/styles/all.css
@@ -8,13 +8,21 @@
 }
 
 :root {
-    --azul-claro: rgb(109, 109, 255);
+    --azul-claro: rgb(111, 111, 255);
     --azul-mediano: rgb(56, 69, 130);
     --azul-escuro: rgb(31, 47, 115);
 }
 
 strong {
     color: rgb(69, 255, 255);
+}
+
+i {
+    margin: 5px;
+}
+
+.bi-star-fill {
+    color: rgb(244, 244, 0);
 }
 
 header {
@@ -75,6 +83,129 @@ header button:hover {
     box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.28);
     background-color: rgb(2, 211, 211);
     cursor: pointer;
-    transform: scale(1.02);
+    transform: scale(1.03);
     transform: translateY(-2px)
 }
+
+main {
+    padding: 20px 13px 0px 13px;
+    margin: auto;
+    width: 1050px;
+}
+
+div#search-bar {
+    display: flex;
+}
+
+div#search-bar input {
+    border-radius: 5px;
+    border: none;
+    border: 1px solid gray;
+
+    height: 30px;
+    width: 850px;
+    margin: 10px;
+    padding: 20px;
+}
+
+button#search {
+    background-color: rgb(31, 47, 115);
+    border-radius: 10px;
+    border: none;
+    margin-right: 10px;
+    margin-top: 10px;
+    height: 40px;
+    padding: 10px 7px;
+    display: flex;
+    align-items: center;
+    color: white;
+    font-weight: bolder;
+    font-size: 15px;
+    cursor: pointer;
+    transition: .2s;
+}
+
+button#search:hover {
+    background-color: rgb(54, 69, 136);
+    text-decoration: underline;
+}
+
+section.categorias {
+    background-color: var(--azul-escuro);
+    padding: 30px;
+    width: 982px;
+}
+
+nav {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+}
+
+div.favoritos {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+a.categoria {
+    background-color: white;
+    box-shadow: 3px 3px 4px rgba(0, 0, 0, 0.28);
+    border-radius: 10px;
+    text-decoration: none;
+    margin: 10px;
+    padding: 5px;
+    min-width: 200px;
+    min-height: 50px;
+    justify-self: center;
+    display: flex;
+    position: relative;
+    align-items: center;
+    justify-content: center;
+    color: rgb(41, 57, 129);
+    font-weight: bolder;
+    font-size: 23px;
+    transition: .3s;
+}
+
+section.categorias a::after {
+    content: ' ';
+    width: 0%;
+    height: 3px;
+    background-color: rgb(0, 18, 96);
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    transition: .4s ease-in-out;
+}
+
+section.categorias a:hover::after {
+    width: 100%;
+}
+
+section.categorias a:hover {
+    transform: scale(1.03);
+    transform: translateY(-3px);
+}
+
+a.favoritados {
+    background-color: white;
+    box-shadow: 3px 3px 4px rgba(0, 0, 0, 0.28);
+    border-radius: 10px;
+    text-decoration: none;
+    padding: 5px;
+    margin: 10px;
+    min-width: 400px;
+    min-height: 50px;
+    justify-self: center;
+    display: flex;
+    position: relative;
+    align-items: center;
+    justify-content: center;
+    color: rgb(41, 57, 129);
+    font-weight: bolder;
+    font-size: 23px;
+    transition: .3s;
+}
+
+
