--- a/styles/all.css
+++ b/styles/all.css
@@ -90,7 +90,12 @@ header button:hover {
 main {
     padding: 20px 13px 0px 13px;
     margin: auto;
-    width: 1050px;
+    width: 1000px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    flex: auto;
 }
 
 div#search-bar {
@@ -127,13 +132,12 @@ button#search {
 
 button#search:hover {
     background-color: rgb(54, 69, 136);
-    text-decoration: underline;
 }
 
 section.categorias {
     background-color: var(--azul-escuro);
     padding: 30px;
-    width: 982px;
+    width: 962px;
 }
 
 nav {
@@ -186,6 +190,9 @@ section.categorias a:hover::after {
 section.categorias a:hover {
     transform: scale(1.03);
     transform: translateY(-3px);
+    box-shadow: 6px 6px 8px rgba(0, 0, 0, 0.28);
+    background-color: rgb(71, 84, 145);
+    color: white;
 }
 
 a.favoritados {
@@ -208,4 +215,83 @@ a.favoritados {
     transition: .3s;
 }
 
+section.destaques {
+    display: flex;
+    flex: auto;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
 
+section.destaques h2 {
+    margin: 15px;
+    text-align: center;
+    border-radius: 10px;
+    padding: 20px;
+    max-width: 1000px;
+    width: 950px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    font-size: 30px;
+    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.26);
+    font-family: sans-serif;
+    transition: .3s;
+}
+
+section.destaques h2:hover {
+    transform: scale(1.01);
+}
+
+article {
+    border: 1px solid lightgray;
+    overflow: hidden;
+    width: 950px;
+    border-radius: 5px;
+    margin: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+}
+
+article h3 {
+    background-color: rgb(86, 113, 182);
+    padding: 10px;
+    color: white;
+    text-align: center;
+    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.23);
+    font-size: 26px;
+}
+
+div.conteudo_livro {
+    padding: 15px;
+    margin: 10px;
+    border: 1px dashed rgb(160, 160, 160);
+}
+
+p.autor {
+    font-weight: bolder;
+    font-size: 20px;
+    margin-top: 10px;
+    margin-bottom: 40px;
+}
+
+p.interesse {
+    margin-top: 40px;
+    margin-bottom: 10px;
+}
+
+div.conteudo_livro i {
+    margin: 0;
+    padding: 0;
+}
+
+div.conteudo_livro a {
+    text-decoration: none;
+    background-color: rgb(135, 157, 255);
+    padding: 3px;
+    color: white;
+    border-radius: 5px;
+    transition: .2s;
+    margin: 4px;
+}
+
+div.conteudo_livro a:hover {
+    background-color: rgb(54, 69, 136);
+}
